--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -15,7 +15,8 @@ img
 
 body,
 html
-  overflow-x: hidden
+  // overflow-x: hidden
+  overflow: auto
   font-family: 'Rubik', sans-serif
   font-family: 'Ruda', sans-serif
 
